--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,26 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <!--app color-->
+    <color name="color262626">#262626</color>
+    <color name="colorFFFFFF">#FFFFFF</color>
+    <color name="colorDCDCDC">#DCDCDC</color>
+    <color name="colorABABAB">#ABABAB</color>
+    <color name="color118EE9">#118EE9</color>
+    <color name="color222222">#222222</color>
+    <color name="color999999">#999999</color>
+    <color name="color333333">#333333</color>
+    <color name="color444444">#444444</color>
+    <color name="colorE7531E">#E7531E</color>
+    <color name="color888888">#888888</color>
+    <color name="colorF5F5F9">#F5F5F9</color>
+    <color name="color666666">#666666</color>
+    <color name="colorE8E8E8">#E8E8E8</color>
+    <color name="colorCCE0FF">#CCE0FF</color>
+    <color name="color0DD6B1">#0DD6B1</color>
+    <color name="color875A2A">#875A2A</color>
+    <color name="colorFFF9EC">#FFF9EC</color>
+    <color name="colorF33B3B">#F33B3B</color>
+    <color name="colorFF0000">#FF0000</color>
 </resources>
